# sqlite_rx_multi

./: .gitignore  Dockerfile  main.py  pyproject.toml  pytest.ini
sqlite_rx/: auth.py  client.py  metrics.py  monitor.py  multiserver.py  server.py
sqlite_rx/cli/: multiserver.py  server.py
sqlite_rx/docs/: auto-connect-docs.md  healthcheck_api.md
sqlite_rx/examples/: multi_database_example.py
sqlite_rx/tests/cli/: test_cli_client.py
sqlite_rx/tests/client/: test_client_reconnect.py
sqlite_rx/tests/misc/: test_backup_thread.py  test_data_dir.py  test_health_check.py  test_path_utils.py  test_socket.py
sqlite_rx/tests/monitor/: test_monitor.py
sqlite_rx/tests/multi/: test_autoconnect.py  test_multiserver.py  test_multiserver_db_process.py
sqlite_rx/tests/plain/: conftest.py
sqlite_rx/tests/server/: test_server.py
sqlite_rx/tests/zap/: conftest.py
sqlite_rx/utils/: path_utils.py
